# pyresistance

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: __init__.py
tests/: api_test.py  conftest.py
